--- a/index.html
+++ b/index.html
@@ -7,6 +7,49 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="column-full">
+          <h1>Weekly Planner</h1>
+        </div>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <div class="row">
+        <div class="column-full">
+          <button>Add Entry</button>
+        </div>
+      </div>
+      <div class="modal-background">
+        <div class="modal-window">
+          <form>
+            <div class="row">
+              <div class="column-full">
+                <h1>Add Entry</h1>
+              </div>
+            </div>
+            <div class="row">
+              <div class="column-flex">
+                <select name="day" id="days">
+                  <option value="monday">Monday</option>
+                  <option value="tuesday">Tuesday</option>
+                  <option value="wednesday">Wednesday</option>
+                  <option value="thursday">Fhursday</option>
+                  <option value="friday">Friday</option>
+                  <option value="saturday">Saturday</option>
+                  <option value="sunday">Sunday</option>
+                </select>
+              </div>
+              <div class="column-flex"></div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </main>
   <script src="main.js"></script>
 </body>
 </html>
