--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <main>
     <div class="container">
       <div class="row">
-        <div class="column-full">
+        <div class="column-full display-button">
           <button class="add-entry-button">Add Entry</button>
         </div>
       </div>
