--- a/index.html
+++ b/index.html
@@ -19,12 +19,23 @@
   </header>
   <main>
     <div class="container">
+      <div class="row height align-center">
+        <div class="column-full display-flex space-evenly">
+          <a href="#">Sunday</a>
+          <a href="#">Monday</a>
+          <a href="#">Tuesday</a>
+          <a href="#">Wednesday</a>
+          <a href="#">Thursday</a>
+          <a href="#">Friday</a>
+          <a href="#">Saturday</a>
+        </div>
+      </div>
       <div class="row">
         <div class="column-full display-button">
           <button class="add-entry-button">Add Entry</button>
         </div>
       </div>
-      <div class="modal-background">
+      <div class="modal-background hidden">
         <div class="modal-window">
           <div class="row">
             <div class="column-full">
