--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="layout.css">
 </head>
+
 <body class="background">
   <header>
     <div class="container">
@@ -37,47 +39,46 @@
       </div>
       <div class="modal-background hidden">
         <div class="modal-window">
-          <div class="row">
-            <div class="column-full">
-              <form>
-                <div class="row">
-                  <div class="column-full text-align-center">
-                    <h1>Add Entry</h1>
-                  </div>
-                </div>
-                <div class="row justify-left">
-                  <div class="column-flex display-flex margin-left-small ">
-                    <select name="day" id="days">
-                      <option value="monday">Monday</option>
-                      <option value="tuesday">Tuesday</option>
-                      <option value="wednesday">Wednesday</option>
-                      <option value="thursday">Fhursday</option>
-                      <option value="friday">Friday</option>
-                      <option value="saturday">Saturday</option>
-                      <option value="sunday">Sunday</option>
-                    </select>
-                  </div>
-                  <div class="column-flex display-flex margin-left-small ">
-                    <input class="time-size" type="text" name="time" placeholder="Enter Time">
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="column-full margin-left-small margin-right-small">
-                    <textarea name="description" id="description" placeholder="Description" class="description-size"></textarea>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="column-full text-align-right margin-right-small">
-                    <button class="submit-button">Submit</button>
-                  </div>
-                </div>
-              </form>
+          <form>
+            <div class="row">
+              <div class="column-full text-align-center">
+                <h1>Add Entry</h1>
+              </div>
             </div>
-          </div>
+            <div class="row justify-left">
+              <div class="column-flex display-flex margin-left-small ">
+                <select name="day" id="days">
+                  <option value="monday">Monday</option>
+                  <option value="tuesday">Tuesday</option>
+                  <option value="wednesday">Wednesday</option>
+                  <option value="thursday">Fhursday</option>
+                  <option value="friday">Friday</option>
+                  <option value="saturday">Saturday</option>
+                  <option value="sunday">Sunday</option>
+                </select>
+              </div>
+              <div class="column-flex display-flex margin-left-small ">
+                <input class="" type="time" name="time">
+              </div>
+            </div>
+            <div class="row">
+              <div class="column-full margin-left-small margin-right-small">
+                <textarea name="description" id="description" placeholder="Description"
+                  class="description-size"></textarea>
+              </div>
+            </div>
+            <div class="row">
+              <div class="column-full text-align-right margin-right-small">
+                <button class="submit-button">Submit</button>
+              </div>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </main>
   <script src="main.js"></script>
+  <script src="data.js"></script>
 </body>
+
 </html>
