--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
   <main>
     <div class="container">
       <div class="row height align-center">
-        <div class="column-full display-flex space-evenly">
-          <a href="#">Sunday</a>
-          <a href="#">Monday</a>
-          <a href="#">Tuesday</a>
-          <a href="#">Wednesday</a>
-          <a href="#">Thursday</a>
-          <a href="#">Friday</a>
-          <a href="#">Saturday</a>
+        <div class="column-full display-flex space-evenly" id="days">
+          <a href="#" data-view="sunday">Sunday</a>
+          <a href="#" data-view="monday">Monday</a>
+          <a href="#" data-view="tuesday">Tuesday</a>
+          <a href="#" data-view="wednesday">Wednesday</a>
+          <a href="#" data-view="thursday">Thursday</a>
+          <a href="#" data-view="friday">Friday</a>
+          <a href="#" data-view="saturday">Saturday</a>
         </div>
       </div>
       <div class="row">
@@ -47,7 +47,7 @@
             </div>
             <div class="row justify-left">
               <div class="column-flex display-flex margin-left-small ">
-                <select name="day" id="days">
+                <select name="day" id="days" required>
                   <option value="monday">Monday</option>
                   <option value="tuesday">Tuesday</option>
                   <option value="wednesday">Wednesday</option>
@@ -58,13 +58,13 @@
                 </select>
               </div>
               <div class="column-flex display-flex margin-left-small ">
-                <input class="" type="time" name="time">
+                <input class="" type="time" name="time" required>
               </div>
             </div>
             <div class="row">
               <div class="column-full margin-left-small margin-right-small">
                 <textarea name="description" id="description" placeholder="Description"
-                  class="description-size"></textarea>
+                  class="description-size" required></textarea>
               </div>
             </div>
             <div class="row">
