--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
           </form>
         </div>
       </div>
+      <div class="row">
+        <div class="column-full">
+          <div class="row justify-center">
+            <p>Scheduled events for <span>Monday</span></p>
+          </div>
+          <div class="row justify-center">
+            <table>
+              <thead>
+                <tr>
+                  <th>Time</th>
+                  <th>Description</th>
+                </tr>
+              </thead>
+              <tbody">
+                <tr>
+                  <td>test1</td>
+                  <td>test2</td>
+                </tr>
+                <tr>
+                  <td>test1</td>
+                  <td>test2</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
   <script src="main.js"></script>
